@@ -1,14 +1,12 @@
-package com.example.demo.service.impl;
+package com.indecsa.service.impl;
 
-import com.example.demo.dto.request.EmpleadoRequestDTO;
-import com.example.demo.dto.response.EmpleadoResponseDTO;
-import com.example.demo.dto.response.LoginResponseDTO;
-import com.example.demo.dto.response.RolResponseDTO;
-import com.example.demo.model.Empleado;
-import com.example.demo.model.Rol;
-import com.example.demo.repository.EmpleadoRepository;
-import com.example.demo.repository.RolRepository;
-import com.example.demo.service.EmpleadoService;
+import com.indecsa.dto.empleado.EmpleadoRequest;
+import com.indecsa.dto.empleado.EmpleadoResponse;
+import com.indecsa.model.Empleado;
+import com.indecsa.model.Rol;
+import com.indecsa.repository.EmpleadoRepository;
+import com.indecsa.repository.RolRepository;
+import com.indecsa.service.EmpleadoService;
 import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.crypto.password.PasswordEncoder;
@@ -16,140 +14,82 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Transactional(readOnly = true)
 public class EmpleadoServiceImpl implements EmpleadoService {
 
     private final EmpleadoRepository empleadoRepository;
     private final RolRepository rolRepository;
     private final PasswordEncoder passwordEncoder;
 
-    // ─── FIND ALL ─────────────────────────────────────────────────────────────
     @Override
-    @Transactional(readOnly = true)
-    public List<EmpleadoResponseDTO> findAll() {
+    public List<EmpleadoResponse> findAll() {
         return empleadoRepository.findAll()
                 .stream()
-                .map(this::toResponse)
-                .collect(Collectors.toList());
+                .map(EmpleadoResponse::from)
+                .toList();
     }
 
-    // ─── FIND BY ID ───────────────────────────────────────────────────────────
     @Override
-    @Transactional(readOnly = true)
-    public EmpleadoResponseDTO findById(Integer id) {
-        return toResponse(getEmpleadoOrThrow(id));
+    public EmpleadoResponse findById(Integer id) {
+        return EmpleadoResponse.from(getEmpleadoOrThrow(id));
     }
 
-    // ─── FIND BY ROL ──────────────────────────────────────────────────────────
-    @Override
-    @Transactional(readOnly = true)
-    public List<EmpleadoResponseDTO> findByRol(Integer idRol) {
-        if (!rolRepository.existsById(idRol)) {
-            throw new EntityNotFoundException("Rol no encontrado con id: " + idRol);
-        }
-        return empleadoRepository.findByRol_IdRol(idRol)
-                .stream()
-                .map(this::toResponse)
-                .collect(Collectors.toList());
-    }
-
-    // ─── CREATE ───────────────────────────────────────────────────────────────
     @Override
     @Transactional
-    public EmpleadoResponseDTO create(EmpleadoRequestDTO dto) {
-        if (empleadoRepository.existsByCorreoEmpleado(dto.getCorreoEmpleado())) {
-            throw new IllegalArgumentException(
-                    "Ya existe un empleado con el correo: " + dto.getCorreoEmpleado());
+    public EmpleadoResponse create(EmpleadoRequest request) {
+        if (empleadoRepository.existsByCorreoEmpleado(request.getCorreoEmpleado())) {
+            throw new IllegalArgumentException("Ya existe un empleado con el correo: " + request.getCorreoEmpleado());
         }
-        Rol rol = rolRepository.findById(dto.getIdRol())
-                .orElseThrow(() -> new EntityNotFoundException(
-                        "Rol no encontrado con id: " + dto.getIdRol()));
+        if (empleadoRepository.existsByCurp(request.getCurp())) {
+            throw new IllegalArgumentException("Ya existe un empleado con la CURP: " + request.getCurp());
+        }
+        Rol rol = rolRepository.findById(request.getIdRol())
+                .orElseThrow(() -> new EntityNotFoundException("Rol no encontrado con id: " + request.getIdRol()));
 
-        Empleado empleado = new Empleado();
-        empleado.setNombreEmpleado(dto.getNombreEmpleado());
-        empleado.setCorreoEmpleado(dto.getCorreoEmpleado().toLowerCase().trim());
-        empleado.setContrasena(passwordEncoder.encode(dto.getContrasena()));
-        empleado.setRol(rol);
-        return toResponse(empleadoRepository.save(empleado));
+        Empleado empleado = Empleado.builder()
+                .nombreEmpleado(request.getNombreEmpleado())
+                .curp(request.getCurp())
+                .correoEmpleado(request.getCorreoEmpleado().toLowerCase().trim())
+                .contrasena(passwordEncoder.encode(request.getContrasena()))
+                .rol(rol)
+                .build();
+        return EmpleadoResponse.from(empleadoRepository.save(empleado));
     }
 
-    // ─── UPDATE ───────────────────────────────────────────────────────────────
     @Override
     @Transactional
-    public EmpleadoResponseDTO update(Integer id, EmpleadoRequestDTO dto) {
+    public EmpleadoResponse update(Integer id, EmpleadoRequest request) {
         Empleado empleado = getEmpleadoOrThrow(id);
 
-        if (!empleado.getCorreoEmpleado().equals(dto.getCorreoEmpleado())
-                && empleadoRepository.existsByCorreoEmpleado(dto.getCorreoEmpleado())) {
-            throw new IllegalArgumentException(
-                    "Ya existe un empleado con el correo: " + dto.getCorreoEmpleado());
+        if (!empleado.getCorreoEmpleado().equals(request.getCorreoEmpleado())
+                && empleadoRepository.existsByCorreoEmpleado(request.getCorreoEmpleado())) {
+            throw new IllegalArgumentException("Ya existe un empleado con el correo: " + request.getCorreoEmpleado());
         }
-        Rol rol = rolRepository.findById(dto.getIdRol())
-                .orElseThrow(() -> new EntityNotFoundException(
-                        "Rol no encontrado con id: " + dto.getIdRol()));
 
-        empleado.setNombreEmpleado(dto.getNombreEmpleado());
-        empleado.setCorreoEmpleado(dto.getCorreoEmpleado().toLowerCase().trim());
-        empleado.setContrasena(passwordEncoder.encode(dto.getContrasena()));
+        Rol rol = rolRepository.findById(request.getIdRol())
+                .orElseThrow(() -> new EntityNotFoundException("Rol no encontrado con id: " + request.getIdRol()));
+
+        empleado.setNombreEmpleado(request.getNombreEmpleado());
+        empleado.setCurp(request.getCurp());
+        empleado.setCorreoEmpleado(request.getCorreoEmpleado().toLowerCase().trim());
+        empleado.setContrasena(passwordEncoder.encode(request.getContrasena()));
         empleado.setRol(rol);
-        return toResponse(empleadoRepository.save(empleado));
+
+        return EmpleadoResponse.from(empleadoRepository.save(empleado));
     }
 
-    // ─── DELETE ───────────────────────────────────────────────────────────────
     @Override
     @Transactional
     public void delete(Integer id) {
-        if (!empleadoRepository.existsById(id)) {
-            throw new EntityNotFoundException("Empleado no encontrado con id: " + id);
-        }
+        getEmpleadoOrThrow(id);
         empleadoRepository.deleteById(id);
     }
 
-    // ─── LOGIN ────────────────────────────────────────────────────────────────
-    @Override
-    @Transactional(readOnly = true)
-    public LoginResponseDTO login(String correo, String contrasena) {
-        // Buscar empleado por correo (ignorando mayúsculas y espacios)
-        Empleado empleado = empleadoRepository
-                .findByCorreoEmpleado(correo.toLowerCase().trim())
-                .orElseThrow(() -> new IllegalArgumentException("Credenciales incorrectas"));
-
-        // Verificar contraseña con BCrypt
-        if (!passwordEncoder.matches(contrasena, empleado.getContrasena())) {
-            throw new IllegalArgumentException("Credenciales incorrectas");
-        }
-
-        return LoginResponseDTO.builder()
-                .idEmpleado(empleado.getIdEmpleado())
-                .nombreEmpleado(empleado.getNombreEmpleado())
-                .correoEmpleado(empleado.getCorreoEmpleado())
-                .nombreRol(empleado.getRol().getNombreRol().name())
-                .build();
-    }
-
-    // ─── HELPERS ──────────────────────────────────────────────────────────────
     private Empleado getEmpleadoOrThrow(Integer id) {
         return empleadoRepository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException(
-                        "Empleado no encontrado con id: " + id));
-    }
-
-    // ─── MAPPER ───────────────────────────────────────────────────────────────
-    private EmpleadoResponseDTO toResponse(Empleado empleado) {
-        RolResponseDTO rolDTO = RolResponseDTO.builder()
-                .idRol(empleado.getRol().getIdRol())
-                .nombreRol(empleado.getRol().getNombreRol())
-                .descripcionRol(empleado.getRol().getDescripcionRol())
-                .build();
-
-        return EmpleadoResponseDTO.builder()
-                .idEmpleado(empleado.getIdEmpleado())
-                .nombreEmpleado(empleado.getNombreEmpleado())
-                .correoEmpleado(empleado.getCorreoEmpleado())
-                .rol(rolDTO)
-                .build();
+                .orElseThrow(() -> new EntityNotFoundException("Empleado no encontrado con id: " + id));
     }
 }
